<resources>
    <string name="app_name_indiana">Indiana</string>
    <string name="main_rb_indiana_text">夺宝</string>
    <string name="main_rb_latest_announcement_text">最新揭晓</string>
    <string name="main_rb_shopping_card_text">购物车</string>
    <string name="main_rb_personal_center_text">个人中心</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_titlebar_title_indiana">一元夺宝</string>
    <string name="main_titlebar_title_lastest_anno">最新揭晓</string>
    <string name="main_titlebar_title_shopping_cart">购物车</string>
    <string name="main_titlebar_title_personal_center">个人中心</string>
    <string name="title_activity_banner_activity_test">BannerActivityTest</string>
    <string name="indiana_product_category_hots">人气</string>
    <string name="indiana_product_category_lasest">最新</string>
    <string name="indian_product_category_schedule">进度</string>
    <string name="indiana_product_category_need_peoples">总需</string>
    <string name="indiana_product_category_categoryitems">分类</string>
    <string name="indiana_product_item_bingo_process">开奖进度</string>
    <string name="f_indian_product_load_more_hint">正在加载更多...</string>
    <string name="f_indian_product_load_fail_hint">加载失败</string>
    <string name="lastest_item_runlottory_hint.xml">正在揭晓==》</string>
    <string name="laest_bingo_info_user">获奖用户：</string>
    <string name="lastest_bingo_info_buycounts">参与次数：</string>
    <string name="latest_bingo_info_run_lottory_time">揭晓时间：</string>
    <string name="comm_load_more_hint_all_complete">--已经加载完全部--</string>
    <string name="comm_load_more_hint_fail">加载失败</string>
    <string name="latest_item_runninglottory_wait_hint">正在计算中...</string>
    <string name="latest_item_runninglottory_request_hint1">请求结果中...</string>
    <string name="comm_not_network">没有网络，轻点重新加载</string>
    <string name="f_shoppingcart_item_buy_counts">购买次数</string>
    <string name="f_shoppingcart_empty_cart">您的购物车空空如也</string>
    <string name="f_shoppingcart_go_indiana">马上去夺宝</string>
    <string name="f_shoppingcart_buycnt_hint">共%1$d件，</string>
    <string name="f_shoppingcart_commit_pay">结算</string>
    <string name="f_shoppingcart_join_describe">总需%1$d次，剩余%2$d次</string>
    <string name="f_shoppingcart_pay_hint">%1$d夺宝币</string>
    <string name="activity_productdetailinfo_titlebar_title">商品详情</string>
    <string name="activity_productdetailinfo_progressing_des1"> 总需:%1$d次</string>
    <string name="activity_productdetailinfo_hasjoin_hint">你还没有参与本次夺宝哦</string>
    <string name="activity_productdetailinfo_hasjoin_hint_join">已参与,我的夺宝号[%1$s]</string>
    <string name="activity_productdetailinfo_hasjoin_hint_join_2">
        <![CDATA[
            <font color="#d4d4d4">
            已参与,参与次数</font> [ <font color="#0278fe"><a href="%1$s">&nbsp; %2$d &nbsp;</a></font> ]
        ]]>

    </string>
    <string name="activity_productdetailinfo_lucky_number_1">
              幸运号码:
    </string>
    <string name="activity_productdetailinfo_lucky_number">
         %1$s
    </string>
    <string name="activity_productdetailinfo_calc_detial_web_title">计算详情</string>
    <string name="activity_productdetailinfo_btn_why_calc">计算详细</string>
    <string name="activity_productdetailinfo_bingo_ing_hint">正在揭晓中...</string>
    <string name="activity_productdetailinfo_more_info">图文详细</string>
    <string name="activity_productdetialinfo_more_info_1">建议WIFI下查看></string>
    <string name="activity_productdetailinfo_alljoin_record">所有参与记录</string>
    <string name="activity_productdetailinfo_all_join_record_format">\n用户名:%1$s\t\t参与记录:%2$s\n参与时间:%3$s\n\n</string>
    <string name="activity_productdetailinfo_progressing_des2"> 剩余%1$d次</string>
    <string name="activity_productdetailinfo_add_to_shoppingcart_hint1">添加成功</string>
    <string name="f_personal_btn_log_signup">登录/注册</string>
    <string name="f_personal_btn_log_signup_2">退出</string>
    <string name="f_personal_txvbtn_indiana_record">夺宝记录</string>
    <string name="f_personal_txvbtn_bingo_record">中奖记录</string>
    <string name="f_personal_takeovergoods_address">收货地址</string>
    <string name="f_personal_account_detail">账户明细</string>
    <string name="f_personal_contact_customer_service">联系客服</string>
    <string name="activity_logsignin_title">用户注册登录</string>
    <string name="activity_logsignin_edt_phonenum_hint">手机号码</string>
    <string name="activity_logsignin_edt_password_hint">密码</string>
    <string name="activity_signin_phonenum_hint">请输入手机号码</string>
    <string name="activity_signin_password1">请设置6-12位的登录密码</string>
    <string name="activity_signin_password1_comfirn">再次输入密码</string>
    <string name="activity_logsignin_verification_code">手机验证码</string>
    <string name="activity_logsignin_protocol">《夺宝协议》</string>
    <string name="activity_logsignin_btn_signin">一键注册</string>
    <string name="f_personal_personinfo">个人信息</string>
    <string name="activity_inventorypay_title">订单支付</string>
    <string name="activity_inventorypay_productcount">商品合计</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="activity_login_pwd_length_hint">密码长度不对</string>
    <string name="actiivty_state_runlottory_ing">揭晓中</string>
    <string name="actiivty_state_runlottory_done">已揭晓</string>
    <string name="actiivty_state_runlottory_play_ing">进行中</string>
    <string name="activity_detail_bingouser_info">
        <![CDATA[
        获奖用户: <font color="#0278fe">%1$s</font><br>
        用户地址: %2$s<br>
        参与次数: <font color="#da3651">%3$d</font><br>
        揭晓时间: %4$s
        ]]>
    </string>
    <string name="detail_update_failed">更新失败</string>
    <string name="activity_inventory_pay_balance">余额支付（账户余额:%1$d夺宝币）</string>
    <string name="activity_indianrecord_titlebar_title">夺宝记录</string>
    <string name="activity_indiana_record_tag_all">全部</string>
    <string name="activity_indiana_record_run_ing">进行中</string>
    <string name="activity_indianarecord_tag_run_done">已揭晓</string>
    <string name="activity_inventory_pay_orders_show">
        <![CDATA[
            <div>
            %1$s&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font color="#da3651">%2$d</font><br>
            </div>
        ]]>
    </string>
    <string name="activity_indianarecord_userinfo_1">
        <![CDATA[
        <font color="#686868">%1$s</font><br>
        <font color="#d4d4d4">参与期号:&nbsp;%2$s <br>
        参与次数:&nbsp;%3$d &nbsp;&nbsp;&nbsp; </font>     <font color="#0278fe"><a href="%4$s">查看号码</a> </font>&nbsp;&nbsp;<br><br>
        <font color="#d4d4d4">
        &nbsp;&nbsp;&nbsp;&nbsp;获奖者:&nbsp;</font><font color="#0278fe">%5$s</font><br>
        <font color="#d4d4d4">
        &nbsp;&nbsp;&nbsp;&nbsp;参与次数:&nbsp;</font><font color="#ff4040">%6$d</font><br>
        <font color="#d4d4d4">
        &nbsp;&nbsp;&nbsp;&nbsp;开奖号码:&nbsp;</font><font color="#ff4040">%7$s</font><br>
        <font color="#d4d4d4">
        &nbsp;&nbsp;&nbsp;&nbsp;揭晓时间:&nbsp;%8$s<br>
        </font>
        ]]>
    </string>
    <string name="activity_indianarecord_userinfo_2">
        <![CDATA[
        <font color="#686868">%1$s</font><br>
        <font color="#d4d4d4">
        参与期号:&nbsp;%2$s <br>
        </font>
        <font color="#d4d4d4">
        参与次数:&nbsp;</font><font color="#ff4040">%3$d</font> &nbsp;&nbsp;&nbsp; <font color="#0278fe"><a href="%4$s">查看号码</a> </font>&nbsp;&nbsp;<br><br>
        <font color="#d4d4d4">
        进度:&nbsp;</font><font color="#d4d4d4">%5$s</font>

        ]]>
    </string>
     <string name="activity_indianarecord_userinfo_3">
         <![CDATA[
          <font color="#686868">%1$s</font><br>
          <font color="#d4d4d4">
          参与期号:%2$s <br>
          参与次数:%3$d &nbsp;&nbsp;&nbsp; </font>  <font color="#0278fe"><a href="%4$s">查看号码</a> </font>&nbsp;&nbsp;<br><br>
          <font color="#d4d4d4">
          揭晓中...
          </font>
        ]]>

    </string>
    <string name="activity_indianarecord_userinfo_4">
       服务端参数错误
    </string>
    <string name="activity_bingo_record_titlebar_title">中奖记录</string>
    <string name="activity_bingorecord_bingoinfo">
        <![CDATA[
            <font color="#686868">%1$s</font><br>
            <font color="#d4d4d4">
            参与期号:&nbsp;%2$s <br>
            总需人次:&nbsp;%3$d &nbsp;&nbsp;&nbsp;参与次数:&nbsp;%4$d <br>
            开奖号码:&nbsp;</font><font color="#da3651">%5$s</font> &nbsp;&nbsp;&nbsp; <font color="#0278fe"><a href="%6$s">查看号码</a> </font><br><br>
            <font color="#d4d4d4">
            开奖时间:&nbsp;%7$s
            </font>
        ]]>



    </string>
    <string name="custom_schema">indiana</string>
    <string name="check_number_title">查看号码</string>
    <string name="activity_logsignin_signin_read_protocal_hint">请阅读《夺宝协议》并同意</string>
    <string name="activity_logsignin_singin_password_not_same">请输入相同的密码</string>
    <string name="activity_logsignin_signin_username_not_empty">用户名不能为空</string>
    <string name="activity_logsignin_log_not_complete">请填写完整</string>
    <string name="activity_logsignin_log_account_not_exiset">账号不存在</string>
    <string name="activity_logsignin_log_password_error">密码错误</string>
    <string name="activity_logsignin_log_success">注册成功</string>
    <string name="activity_logsignin_sign_vertication_code_hint1">请先输入手机号</string>
    <string name="f_personalcenter_logouting_hint">退出中...</string>
    <string name="f_personalcenter_logouting_hint_fail">网络错误，退出失败</string>
    <string name="activity_inventory_pay_payresult">
              <![CDATA[
            <div>
                %1$s<br>
                购买数量:<font color="#0278fe">%2$d</font>  &nbsp;&nbsp;&nbsp;
                购买成功数量:<font color="#da3651">%3$d</font> <br><br>
            </div>
        ]]>

    </string>
    <string name="activity_inventory_pay_failed">支付失败，其他错误</string>
    <string name="activity_inventory_pay_net_failed">网络出错，支付失败</string>
    <string name="activity_inventory_pay_ing">正在支付中...</string>
    <string name="activity_inventory_pay_success">支付成功</string>
    <string name="activity_inventory_exit_hint">将继续为您支付订单</string>
    <string name="activity_imgview_titlebar_title">图文详情</string>
    <string name="activity_user_info_info">\n用户ID:%1$s\n\n账户余额:%2$s</string>
    <string name="f_personal_userinfo_1">
        <![CDATA[
        余额:&nbsp;<font color="yellow">%1$d</font>
        ]]>
    </string>
    <string name="activity_detailinfo_addto_shoppingcart">加入清单</string>
    <string name="activity_detailinfo_btn_go_nexthot_acitivity">立即前往</string>
    <string name="activity_logsign_signin_username_hint">请输入你的名字</string>
    <string name="activity_detailinfo_listview_item_txv_info_format">
        <![CDATA[
        <html>
            <head><title></title></head>
            <body>
                <div>
                    <font color="#0278fe">%1$s</font><br></br>
                    <font color="#686868">参与了</font><font color="#da3651">%2$s</font>
                    <font color="#686868">次</font>\t
                    <font color="gray">%3$s</font>
                </div>
            </body>
        </html>
        ]]>
    </string>
    <string name="activity_detail_go_next_hot_activity_hint">新一期正在火热进行中...</string>
    <string name="activity_detailInfo_btn_yiyuanduobao">一元夺宝</string>
    <string name="f_indiana_top_menu_category">分类</string>
    <string name="f_indiana_top_menu_tenyuan_area">10元专区</string>
    <string name="f_indiana_top_menu_qaq">常见问题</string>
    <string name="activity_category_search_hint">搜索商品</string>
    <string name="activity_category_title">分类浏览</string>
    <string name="activity_category_net_error">网络错误，请检查</string>
    <string name="activity_category_detail_cnt_des">
        <![CDATA[

        总需:%1$d &nbsp;&nbsp;&nbsp;剩余:<font color="blue">%2$d</font>

        ]]>
    </string>
    <string name="activity_category_detail_add_success">添加成功</string>
    <string name="webview_title_qaq">常见问题</string>
    <string name="activity_user_signin">用户注册</string>
    <string name="activity_obtain_verticationcoade">获取验证码</string>
</resources>