<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <com.example.liangge.indiana.ui.widget.CommTitleBar xmlns:app1="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app1:titlebar_title="@string/activity_user_signin">

    </com.example.liangge.indiana.ui.widget.CommTitleBar>

    <LinearLayout
        android:id="@+id/login_normal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="49.0dip"
            android:clickable="true">

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="25.0dip"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:contentDescription="@string/desc_common_image"
                android:src="@drawable/phone" />

            <AutoCompleteTextView
                android:id="@+id/edt_phone_number"
                style="@style/LoginEidtCont"
                android:layout_toRightOf="@+id/phone_icon"
                android:completionThreshold="1"
                android:hint="@string/activity_signin_phonenum_hint"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:nextFocusForward="@+id/edt_log_password" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:layout_alignParentBottom="true"
                android:background="@color/common_line"
                android:contentDescription="@string/desc_common_image" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="49.0dip"
            android:clickable="true">

            <ImageView
                android:id="@+id/name_icon"
                android:layout_width="25.0dip"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:contentDescription="@string/desc_common_image"
                android:src="@drawable/name" />

            <AutoCompleteTextView
                android:id="@+id/edt_username"
                style="@style/LoginEidtCont"
                android:layout_toRightOf="@+id/name_icon"
                android:completionThreshold="1"
                android:hint="@string/activity_logsign_signin_username_hint"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@+id/edt_log_password" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:layout_alignParentBottom="true"
                android:background="@color/common_line"
                android:contentDescription="@string/desc_common_image" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="49.0dip"
            android:clickable="true">

            <ImageView
                android:id="@+id/pwd1_icon"
                android:layout_width="25.0dip"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:contentDescription="@string/desc_common_image"
                android:src="@drawable/ic_login_pwd" />

            <AutoCompleteTextView
                android:id="@+id/edt_password1"
                style="@style/LoginEidtCont"
                android:layout_toRightOf="@+id/pwd1_icon"
                android:completionThreshold="1"
                android:hint="@string/activity_signin_password1"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:nextFocusForward="@+id/edt_log_password" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:layout_alignParentBottom="true"
                android:background="@color/common_line"
                android:contentDescription="@string/desc_common_image" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/email_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="49.0dip"
            android:clickable="true">

            <ImageView
                android:id="@+id/pwd2_icon"
                android:layout_width="25.0dip"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:contentDescription="@string/desc_common_image"
                android:src="@drawable/ic_login_pwd" />

            <AutoCompleteTextView
                android:id="@+id/edt_password2"
                style="@style/LoginEidtCont"
                android:layout_toRightOf="@+id/pwd2_icon"
                android:completionThreshold="1"
                android:hint="@string/activity_signin_password1_comfirn"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:nextFocusForward="@+id/edt_log_password" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:layout_alignParentBottom="true"
                android:background="@color/common_line"
                android:contentDescription="@string/desc_common_image" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/pass_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="49.0dip"
            android:clickable="true">

            <ImageView
                android:id="@+id/vertication_icon"
                android:layout_width="25.0dip"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:contentDescription="@string/desc_common_image"
                android:src="@drawable/vertication_code" />

            <EditText
                android:id="@+id/edt_vertication_code"
                style="@style/LoginEidtCont"
                android:layout_toLeftOf="@+id/login_forget"
                android:layout_toRightOf="@+id/vertication_icon"
                android:hint="@string/activity_logsignin_verification_code"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:layout_alignParentBottom="true"
                android:background="@color/common_line"
                android:contentDescription="@string/desc_common_image" />

            <com.example.liangge.indiana.ui.widget.VerticationCodeTextView
                android:id="@+id/obtain_vertication_code"
                android:onClick="onBtnRetryVeticationCode"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_width="78dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_vertication_code"
                android:enabled="false"
                android:clickable="true"
                android:text="@string/activity_obtain_verticationcoade"
                android:textColor="@drawable/selector_vertication_code_text"
                android:textSize="12.0sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/activity_logsignin_checkbox_readprocotol"
                android:onClick="onCheckBoxAgressProcotol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="我已阅读并同意"/>

            <TextView
                android:onClick="onTextClickProcotol"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/activity_logsignin_protocol"/>

        </LinearLayout>



        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25.0dip"
            android:background="@drawable/btn_main"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onBtnSignIn"
            android:paddingBottom="10.0dip"
            android:paddingTop="10.0dip"
            android:text="@string/activity_logsignin_btn_signin"
            android:textColor="@color/white"
            android:textSize="18.0sp" />

    </LinearLayout>

</LinearLayout>